<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.openmrs.module</groupId>
    <artifactId>pacsintegration</artifactId>
    <version>1.5-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>PACS Integration Module</name>
    <description>Integrates with McKesson PACS system</description>
    <url>https://wiki.openmrs.org/display/docs/PACS+Integration+Module+Module</url>

    <developers>
        <developer>
            <name>PIH</name>
        </developer>
    </developers>

    <organization>
        <name>OpenMRS</name>
        <url>http://openmrs.org</url>
    </organization>


    <scm>
        <connection>scm:git:git@github.com:PIH/openmrs-module-pacsintegration.git</connection>
        <developerConnection>scm:git:git@github.com:PIH/openmrs-module-pacsintegration.git</developerConnection>
        <url>scm:git:git@github.com:PIH/openmrs-module-pacsintegration.git</url>
        <tag>1.4</tag>
  </scm>

    <modules>
        <module>api</module>
        <module>omod</module>
    </modules>

    <properties>
        <openMRSVersion>1.10.4</openMRSVersion>
        <emrVersion>2.0</emrVersion>
        <emrapiVersion>1.17</emrapiVersion>
        <radiologyappVersion>1.0</radiologyappVersion>
        <metadatasharingVersion>1.2.2</metadatasharingVersion>
        <eventVersion>2.5</eventVersion>
        <uiframeworkVersion>3.9</uiframeworkVersion>
        <idgenVersion>4.4.0</idgenVersion>
        <htmlformentryVersion>3.3.0</htmlformentryVersion>
        <providermanagementVersion>2.5.0</providermanagementVersion>
        <reportingVersion>0.10.4</reportingVersion>
        <serializationxstreamVersion>0.2.12</serializationxstreamVersion>
        <calculationVersion>1.2</calculationVersion>
        <appframeworkVersion>2.9</appframeworkVersion>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>

        <!-- Begin OpenMRS core -->

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.api</groupId>
            <artifactId>openmrs-api</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.web</groupId>
            <artifactId>openmrs-web</artifactId>
            <version>${openMRSVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.test</groupId>
            <artifactId>openmrs-test</artifactId>
            <version>${openMRSVersion}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>

        <!-- End OpenMRS core -->

        <!-- Start OpenMRS modules -->

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emrapi-api-1.10</artifactId>
            <version>${emrapiVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>radiologyapp-api</artifactId>
            <version>${radiologyappVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emr-api</artifactId>
            <version>${emrVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>emr-api</artifactId>
            <version>${emrVersion}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api</artifactId>
            <version>${eventVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api-1.x</artifactId>
            <version>${eventVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs</groupId>
            <artifactId>event-api-2.x</artifactId>
            <version>${eventVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>providermanagement-api</artifactId>
            <version>${providermanagementVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-1.9</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-1.10</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>serialization.xstream-api-2.0</artifactId>
            <version>${serializationxstreamVersion}</version>
            <scope>provided</scope>
        </dependency>

        <!-- the following are transitive dependency, required by the emr module and others. We don't directly require them ourselves,
             so they are not mentioned in config.xml  We need to add them here so that we can properly fire up the handler context during testing -->
        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>uiframework-api</artifactId>
            <version>${uiframeworkVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>idgen-api</artifactId>
            <version>${idgenVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>htmlformentry-api-1.10</artifactId>
            <version>${htmlformentryVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>reporting-api</artifactId>
            <version>${reportingVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>calculation-api</artifactId>
            <version>${calculationVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>metadatasharing-api</artifactId>
            <version>${metadatasharingVersion}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.openmrs.module</groupId>
            <artifactId>appframework-api</artifactId>
            <version>${appframeworkVersion}</version>
            <scope>test</scope>
        </dependency>


        <!-- End OpenMRS modules -->

        <dependency>
            <groupId>ca.uhn.hapi</groupId>
            <artifactId>hapi</artifactId>
            <version>0.5</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-tx</artifactId>
            <version>3.0.5.RELEASE</version>
            <scope>provided</scope>
        </dependency>
        
        <dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>1.9.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>1.4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>1.4.12</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<artifactId>mockito-all</artifactId>
					<groupId>org.mockito</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>

    </dependencies>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <target>1.6</target>
                        <source>1.6</source>
                        <encoding>UTF-8</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.openmrs.maven.plugins</groupId>
                    <artifactId>maven-openmrs-plugin</artifactId>
                    <version>1.0.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.5</version>
					<configuration>
						<argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
					</configuration>
				</plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <generateBackupPoms>false</generateBackupPoms>
                    <allowSnapshots>false</allowSnapshots>
                    <properties>
                        <property>
                            <name>openMRSVersion</name>
                            <version>[1.9.0,1.10.0-!)</version>
                        </property>
                        <property>
                            <name>openMRSwebVersion</name>
                            <version>[1.9.0,1.10.0-!)</version>
                        </property>
                    </properties>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>openmrs-repo</id>
            <name>OpenMRS Nexus Repository</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>openmrs-repo-modules</id>
            <name>OpenMRS Modules</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/modules</url>
        </repository>
        <snapshotRepository>
            <id>openmrs-repo-snapshots</id>
            <name>OpenMRS Snapshots</name>
            <url>http://mavenrepo.openmrs.org/nexus/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>
